Fixed item overlapping and added column resizing

--- a/client/css/Login.scss
+++ b/client/css/Login.scss
@@ -51,10 +51,10 @@
   align-items: center;
   text-align: center;
   width: 50vw;
-  height: 75vh;
+  height: 85vh;
   border: 2px solid white;
   border-radius: 10px;
-  overflow: auto;
+  overflow: hidden;
   animation: 1s slideInFromTop;
   animation-fill-mode: both;
   h1,
@@ -86,13 +86,12 @@
   }
   .footer {
     display: flex;
+    position: relative;
     flex-direction: column;
-    height: fit-content;
     align-items: center;
     width: 100%;
     gap: 2px;
     margin: 0px;
-    padding: 20px 5px;
     animation: 1s slideInFromBottom;
     animation-delay: 1s;
     animation-fill-mode: both;
@@ -134,6 +133,7 @@
 
   .innerLogin {
     display: flex;
+    position: relative;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -159,7 +159,14 @@
     background-color: $glass-blue;
     border-bottom: 2px solid white;
   }
-
+  .outerForm {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+  }
   .formContainer {
     display: flex;
     flex-direction: column;
@@ -167,7 +174,8 @@
     align-items: center;
     overflow: hidden;
     width: 100%;
-    height: 50%;
+    margin-bottom: auto;
+    margin-top: auto;
     padding: 5px;
     margin: 0px;
     overflow-x: hidden;
